--- a/MonolitoFinanceiro/MonolitoFinanceiro.dproj
+++ b/MonolitoFinanceiro/MonolitoFinanceiro.dproj
@@ -106,6 +106,14 @@
             <Form>frmPrincipal</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="src\View\MonolitoFinanceiro.View.CadastroPadrao.pas">
+            <Form>frmCadastroPadrao</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="src\View\MonolitoFinanceiro.View.Splash.pas">
+            <Form>frmSplash</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -132,7 +140,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\MonolitoFinanceiro.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="bin\MonolitoFinanceiro.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>MonolitoFinanceiro.exe</RemoteName>
                         <Overwrite>true</Overwrite>
